--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <article>
-      <img src="/images/image-qr-code.png" alt="qr-link">
+      <img src="./images/image-qr-code.png" alt="qr-link">
       <h3>Improve your front-end skills by building projects</h3>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </article>
